Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -162,16 +162,14 @@
             gap: 15px;
         }
 
-        .carousel-container {
-            display: flex;
-            gap: 25px;
-            overflow-x: hidden;
-            scroll-behavior: smooth;
-            padding: 15px 5px;
-            width: 100%;
-
-            
-        }
+      .carousel-container {
+    display: flex;
+    gap: 25px;
+    overflow-x: auto;        /* PERMITE VOLTAR */
+    scroll-behavior: smooth;
+    padding: 15px 5px;
+    width: 100%;
+}
 
         .nav-btn {
             background: var(--bg-card);
@@ -975,3 +973,4 @@
     </script>
 </body>
 </html>
+
