Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -569,6 +569,11 @@
             .card-img-wrapper { height: 280px; } 
             #pizza-container .card-img-wrapper { height: 350px; } 
         }
+
+        html, body {
+    overflow-x: hidden;
+}
+        
     </style>
 </head>
 <body>
@@ -983,5 +988,6 @@
     </script>
 </body>
 </html>
+
 
 
