Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -559,6 +559,10 @@
             .card-img-wrapper { height: 280px; } 
             #pizza-container .card-img-wrapper { height: 350px; } 
         }
+
+        html, body {
+    overflow-x: hidden;
+}
         
     </style>
 </head>
@@ -974,6 +978,7 @@
     </script>
 </body>
 </html>
+
 
 
 
