Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -560,7 +560,17 @@
             #pizza-container .card-img-wrapper { height: 350px; } 
         }
 
-        html, body {
+      body {
+    overflow-x: hidden;
+    position: relative;
+}
+
+#main-menu,
+.container,
+section,
+.carousel-wrapper,
+.carousel-container {
+    max-width: 100%;
     overflow-x: hidden;
 }
         
@@ -978,6 +988,7 @@
     </script>
 </body>
 </html>
+
 
 
 
