Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -970,9 +970,10 @@
             if(!document.getElementById('receiver-name').value || !isAddressCalculated || !document.getElementById('address-number').value) {
                 return showNotification("Preencha todos os dados!");
             }
-            window.location.href = "https://seguropagamentos.com.br/pizza";
+            window.location.href = "https://seguropagamentos.com.br/BrosBurguePizza";
         }
     </script>
 </body>
 </html>
+
 
