--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
 
       <section id="promotions">
         <h2 class="section-title">PROMOÇÃO DO DIA</h2>
-        <p class="section-sub">Os combos que mais saem hoje — rápidos, completos e com melhor custo-benefício.</p>
+        <p class="section-sub">Os combos que mais saem hoje rápidos, completos e com melhor custo-benefício.</p>
         <div class="carousel-wrapper">
           <button class="nav-btn" onclick="scrollSlide('promo-container', -1)"><i class="fas fa-arrow-left"></i></button>
           <div class="carousel-container" id="promo-container"></div>
@@ -1088,7 +1088,7 @@
 
   <script>
     const products = [
-      { id: 107, type: 'promotion', name: '2 Pizzas de Calabresa (G) + Refrigerante 2L', desc: 'Duas pizzas tradicionais (G) + refrigerante 2L.', price: 35.90, img: 'promoção1.png' },
+      { id: 107, type: 'promotion', name: '2 Pizzas Grandes (G) + Refrigerante 2L', desc: 'Duas pizzas tradicionais (G) + refrigerante 2L.', price: 35.90, img: 'promoção1.png' },
       { id: 102, type: 'promotion', name: 'Combo Individual Burger', desc: 'Burger Cheddar Bacon + Batata Frita + Refrigerante Lata', price: 29.90, img: 'promoção2.png' },
       { id: 1, type: 'pizza', name: 'MARGHERITA', desc: 'Mussarela, molho de tomate, rodelas de tomate e manjericão fresco.', price: 45.90, img: 'margherita.png' },
       { id: 5, type: 'pizza', name: 'QUATRO QUEIJOS', desc: 'Mussarela, cheddar, provolone e catupiry cremoso.', price: 49.90, img: '4queijo.png' },
@@ -1380,4 +1380,5 @@
 
 </body>
 </html>
+
 
